First commit - added ned space buttons, enabled a handful of spaces, took out empty boxes and fixed chat window title alignment

--- a/client/main.css
+++ b/client/main.css
@@ -108,7 +108,6 @@ p {
 
 .col-md-10.col-md-offset-1.title-div {
   position: relative;
-  text-align: center;
 }
 
 .topic-title {
